# QAIF

./: .env  .env.example  .gitignore  Dockerfile  POS_API_Collection.json  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
docs/: ARQUITECTURA.md  INSTALACION.md  RESULTADOS.md  TRAZABILIDAD.md  USO.md  credentials_guide.md  decisions.md
mcp_servers/drive/: auth.py  config.json  requirements.txt  server.py  tools.py
mcp_servers/git/: config.json  readme_parser.py  server.py  tools.py
mcp_servers/jira/: auth.py  config.json  server.py  tools.py
mcp_servers/pos_api/: api_launcher.py  config.json  runner.py  server.py  tools.py
mcp_servers/reporting/: config.json  server.py  tools.py
mcp_servers/reporting/templates/: report_full.md.j2
mcp_servers/workspace/: audit.py  config.json  server.py  tools.py
scripts/: health_check.py  pull_model.sh
src/cache/: cag_manager.py
src/console/: __main__.py  app.py  prompts.py  router.py
src/llm/: factory.py
src/orchestrator/: graph.py  state.py
src/orchestrator/nodes/: create_jira.py  extract_stories.py  run_api_tests.py  upload_report.py
src/schemas/: test_case.py  test_result.py  user_story.py
src/utils/: logging_config.py  retry.py
tests/: conftest.py
tests/unit/: test_cag.py  test_router.py  test_schemas.py
workspace/logs/: audit_2026-06-29.jsonl  audit_2026-07-04.jsonl
workspace/reports/: report_task-crud-api_20260704_230451.md
workspace/test_data/: task-crud-api_payloads.json
