[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config", "mcp_servers"]

[project]
name = "mcp_project"
version = "0.1.0"
description = "MCP QA Automation: Transcriptions → Stories → API Testing → Jira"
requires-python = ">=3.12"
dependencies = [
    # AI & Orchestration
    "anthropic>=0.40.0",
    "mcp>=1.3.0",
    "langgraph>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    # Google Drive
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    # Jira
    "atlassian-python-api>=3.41.0",
    # Git
    "gitpython>=3.1.0",
    # HTTP & API testing
    "httpx>=0.27.0",
    # CAG / Cache
    "redis>=5.0.0",
    # Reporting
    "reportlab>=4.0.0",
    "Jinja2>=3.1.0",
    # Console UI
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    # Utilities
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "aiofiles>=23.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
markers = [
    "integration: marks tests that require external services",
    "slow: marks tests that take > 10 seconds",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
